envoy-config.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 4000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/", grpc: {} }
                route: { cluster: eds, timeout: 60s }
          http_filters:
          - name: envoy.router
  clusters:
  - name: eds
    type: EDS
    connect_timeout: 0.25s
    http2_protocol_options: {}
    eds_cluster_config:
      service_name: myapp-service
      eds_config:
        api_config_source:
          api_type: REST
          cluster_names: [eds_cluster]
          refresh_delay: 5s
  - name: eds_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    hosts: [{ socket_address: { address: 'sds-service.default.svc.cluster.local', port_value: 2800 }}]
    # hosts: [{ url: 'tcp://sds-service:2800' }]
node:
  cluster: mycluster
  id: test-id
