kubernete-app-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-app
  template:
    metadata:
      labels:
        app: myapp-app
    spec:
      containers:
        - name: myapp-app
          image: themyth92/grpc:test
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=0.0.0.0:3000"]
            initialDelaySeconds: 5
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=0.0.0.0:3000"]
            initialDelaySeconds: 10
