kubernete-client-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: themyth92/client:test
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
